--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=8675
 org.jobrunr.background-job-server.enabled= true
 #deadlineManager
 
-
+axoniq.axonserver.accesscontrol.enabled=true
+#axoniq.axonserver.accesscontrol.token=your-secure-token
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/OctoBankDB
 spring.datasource.username = OctoBankUser
